docs(runtime): align active guidance with server and pod